Clean up import statements